k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-helloworld
  labels:
    app: flask-helloworld
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: flask-helloworld
