k8s/ingress.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
    creationTimestamp: "2021-03-31T14:49:43Z"
    generation: 1
    labels:
      app: flask-helloworld
    name: flask-helloworld
    namespace: default
  spec:
    rules:
    - host: flask-helloworld.megaloop.world
      http:
        paths:
        - backend:
            serviceName: flask-helloworld
            servicePort: 5000
          path: /
          pathType: ImplementationSpecific
    - host: le-25549537.megaloop.world
      http:
        paths:
        - backend:
            serviceName: flask-helloworld
            servicePort: 5000
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - le-25549537.megaloop.world
      - flask-helloworld.megaloop.world
      secretName: flask-helloworld-deploy-tls
kind: List
